Updated versions of used components
- GWT EventService 1.1.1 -> 1.2.1
- GWT 2.3.0 -> 2.4.0

  Compilation show errors when generating split point report, but app
  itself is compiled correctly and works.

  This version is last supported by GXT 2.2.4

- Added commented parts for transition to GXT 3.0.1 and up.
- Cleaned Entry points, added javadoc.

--- a/opsi-admin-wui/pom.xml
+++ b/opsi-admin-wui/pom.xml
@@ -47,13 +47,13 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
 <!--				<version>2.1-20101001.MGWT219</version> -->
-				<version>2.3.0-1</version>
+				<!--<version>2.3.0-1</version> -->
+				<!--<version>2.4.0</version>-->
+				<version>${gwt.version}</version>
 				<configuration>
 <!--					<runTarget>cz.u2.eis.business.wui.gwt.DesktopApp/index.html</runTarget>-->
 					<runTarget>index.jsp</runTarget>
-					<localWorkers>2</localWorkers>
 					<includes>**/MyGwtTestSuite.java</includes>
-					<htmlunit>FF2,FF3,IE6,IE7,IE8</htmlunit>
 				</configuration>
 				<executions>
 					<execution>
@@ -64,18 +64,6 @@
 						</goals>
 					</execution>
 				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>com.google.gwt</groupId>
-						<artifactId>gwt-user</artifactId>
-						<version>${gwt.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.google.gwt</groupId>
-						<artifactId>gwt-dev</artifactId>
-						<version>${gwt.version}</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 
 		</plugins>
@@ -284,6 +272,27 @@
 			<artifactId>gxt</artifactId>
 			<version>2.2.4-gwt22</version>
 		</dependency>
+
+		<!--
+		<dependency>
+			<groupId>com.sencha.gxt</groupId>
+			<artifactId>gxt</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sencha.gxt</groupId>
+			<artifactId>gxt-legacy</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sencha.gxt</groupId>
+			<artifactId>gxt-chart</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+		-->
+
 <!--
 		<dependency>
 			<groupId>net.zschech.gwt</groupId>
@@ -291,10 +300,21 @@
 			<version>1.1.6</version>
 		</dependency>
 -->
+		<!-- GWT Event service -->
 		<dependency>
 			<groupId>de.novanic.eventservice</groupId>
 			<artifactId>eventservice</artifactId>
-			<version>1.1.1</version>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.novanic.eventservice</groupId>
+			<artifactId>eventservice-rpc</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.novanic.eventservice</groupId>
+			<artifactId>gwteventservice</artifactId>
+			<version>1.2.1</version>
 		</dependency>
 
 		<dependency>
