--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
 			<dependency>
 				<groupId>com.google.gwt</groupId>
 				<artifactId>gwt-dev-ext</artifactId>
-				<version>${gwt.version}</version>
+				<version>2.3.0</version>
 			</dependency>
 
 			<dependency>
@@ -259,14 +259,14 @@
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<spring.security.version>3.0.3.RELEASE</spring.security.version>
 		<eis.core.version>0.5.4</eis.core.version>
-		<gwt.version>2.3.0</gwt.version>
+		<gwt.version>2.4.0</gwt.version>
 		<jackson.version>1.6.1</jackson.version>
 		<hibernate.version>3.6.0.Final</hibernate.version>
 		<hibernate-search.version>3.3.0.CR2</hibernate-search.version>
 		<hibernate-commons-annotations.version>3.2.0.Final</hibernate-commons-annotations.version>
 		<hibernate-validator.version>4.1.0.Final</hibernate-validator.version>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
 </project>
