Major update to Client installation (still work in progress)
- Added possibility to configure Client installation before
  starting it. It yet do not actually start the installation,
  it just set expected properties to OPSI server.

  For now it's only available for Win7-64b-Czech.

- Fixed importing of Clients which ignored Import from CSV option.
- Updated Import from CSV dialog (no import if nothing selected)
- Added option to export Clients to CSV.

- Implemented client/server function to handle OPSI product property.

- Added javadoc for most of Client related classes with explanation
  of params and function. It was originally a real mess with no explanation
  what does it do.

--- a/opsi-admin-wui/src/main/resources/cz/muni/ucn/opsi/wui/gwt/client/client/ClientConstants.properties
+++ b/opsi-admin-wui/src/main/resources/cz/muni/ucn/opsi/wui/gwt/client/client/ClientConstants.properties
@@ -11,3 +11,5 @@ client.clientImport = Importovat
 client.clientImportOpsi = Importovat z OPSI
 client.clientImportOpsi2 = Importovat z jin\u00e9ho OPSI
 client.clientImportCSV = Importovat z CSV
+client.clientExport = Exportovat
+client.clientExportCSV = Exportovat do CSV
