--- a/opsi-admin-wui/src/main/resources/cz/muni/ucn/opsi/wui/gwt/client/instalation/InstallationConstants.properties
+++ b/opsi-admin-wui/src/main/resources/cz/muni/ucn/opsi/wui/gwt/client/instalation/InstallationConstants.properties
@@ -1,2 +1,2 @@
-instalation.name = Jm\u00e9no
-instalation.save = Ulo\u017eit zm\u011bny
+installation.name = Jm\u00e9no
+installation.save = Ulo\u017eit zm\u011bny
