--- a/opsi-admin-core/pom.xml
+++ b/opsi-admin-core/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.muni.ucn</groupId>
 	<artifactId>opsi-admin-core</artifactId>
@@ -19,10 +20,10 @@
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<configuration>
 					<additionalProjectnatures>
-						<projectnature> org.springframework.ide.eclipse.core.springnature</projectnature>
+						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
 					</additionalProjectnatures>
 					<additionalBuildcommands>
-						<buildcommand> org.springframework.ide.eclipse.core.springbuilder</buildcommand>
+						<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
 					</additionalBuildcommands>
 				</configuration>
 			</plugin>
@@ -47,7 +48,7 @@
 			<artifactId>opsi-admin-api</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-        <!-- test scoped dependencies -->
+		<!-- test scoped dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -89,12 +90,12 @@
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
 			<scope>test</scope>
-		</dependency> 
+		</dependency>
 
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -103,90 +104,90 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 		</dependency>
-<!--
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-jmx</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-		</dependency>
--->
+		<!--
+				<dependency>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-jmx</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-annotations</artifactId>
+				</dependency>
+		-->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-search</artifactId>
 		</dependency>
-<!--
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-core</artifactId>
-			<version>2.9.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.solr</groupId>
-			<artifactId>solr-common</artifactId>
-			<version>1.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.solr</groupId>
-			<artifactId>solr-core</artifactId>
-			<version>1.3.0</version>
-			<exclusions>
-				<exclusion>
+		<!--
+				<dependency>
+					<groupId>org.apache.lucene</groupId>
+					<artifactId>lucene-core</artifactId>
+					<version>2.9.1</version>
+				</dependency>
+				<dependency>
 					<groupId>org.apache.solr</groupId>
-					<artifactId>solr-lucene-core</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
--->
+					<artifactId>solr-common</artifactId>
+					<version>1.3.0</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.solr</groupId>
+					<artifactId>solr-core</artifactId>
+					<version>1.3.0</version>
+					<exclusions>
+						<exclusion>
+							<groupId>org.apache.solr</groupId>
+							<artifactId>solr-lucene-core</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+		-->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>net.sf.dozer</groupId>
 			<artifactId>dozer</artifactId>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<scope>test</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<scope>test</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<scope>test</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
-		    <groupId>cglib</groupId>
-		    <artifactId>cglib-nodep</artifactId>
-		</dependency> 
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
 		</dependency>
-<!--
-		<dependency>
-			<groupId>quartz</groupId>
-			<artifactId>quartz</artifactId>
-		</dependency>
--->
-<!--
-		<dependency>
-			<groupId>org.drools</groupId>
-			<artifactId>drools-spring</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.drools</groupId>
-			<artifactId>drools-bpmn2</artifactId>
-		</dependency>
--->
+		<!--
+				<dependency>
+					<groupId>quartz</groupId>
+					<artifactId>quartz</artifactId>
+				</dependency>
+		-->
+		<!--
+				<dependency>
+					<groupId>org.drools</groupId>
+					<artifactId>drools-spring</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.drools</groupId>
+					<artifactId>drools-bpmn2</artifactId>
+				</dependency>
+		-->
 	</dependencies>
 </project>
