--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.muni.ucn</groupId>
@@ -121,13 +121,13 @@
 				<version>${spring.version}</version>
 				<scope>test</scope>
 			</dependency>
-<!--
-			<dependency>
-				<groupId>org.aspectj</groupId>
-				<artifactId>aspectjweaver</artifactId>
-				<version>1.6.1</version>
-			</dependency>
--->
+			<!--
+						<dependency>
+							<groupId>org.aspectj</groupId>
+							<artifactId>aspectjweaver</artifactId>
+							<version>1.6.1</version>
+						</dependency>
+			-->
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core</artifactId>
@@ -139,13 +139,13 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-<!--
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-core-tiger</artifactId>
-				<version>${spring.security.version}</version>
-			</dependency>
--->
+			<!--
+						<dependency>
+							<groupId>org.springframework.security</groupId>
+							<artifactId>spring-security-core-tiger</artifactId>
+							<version>${spring.security.version}</version>
+						</dependency>
+			-->
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-taglibs</artifactId>
@@ -276,7 +276,7 @@
 				<groupId>net.sf.dozer</groupId>
 				<artifactId>dozer</artifactId>
 				<version>5.3.0</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.hsqldb</groupId>
 				<artifactId>hsqldb</artifactId>
