Improved .properties config files
- Added more verbose comments to config options.
- Removed references to existing infrastructure.
- Added info about overriding properties in config file.

--- a/opsi-admin-wui/src/main/resources/META-INF/cocoon/properties/security.properties
+++ b/opsi-admin-wui/src/main/resources/META-INF/cocoon/properties/security.properties
@@ -1,17 +1,19 @@
-#ldap.server = ldap://127.0.0.1:10389/OU=MU,DC=ucn,DC=muni,DC=cz
-ldap.server = ldap://127.0.0.1:10636/OU=MU,DC=ucn,DC=muni,DC=cz
-#ldap.server = ldap://147.251.16.66/OU=MU,DC=ucn,DC=muni,DC=cz
-#ldap.server = ldap://w2k8-r2.u2-win.chr.cz:389/DC=u2-win,DC=chr,DC=cz
-#ldap.searchBase = DC=u2-win,DC=chr,DC=cz
-ldap.searchBase = OU=MU,DC=ucn,DC=muni,DC=cz
-ldap.searchFilter = (&(objectcategory=person)(objectClass=user)(sAMAccountName={0}))
-#ldap.searchFilter = (CN={0})
+###############
+# All settings in this file can be overridden by including them to "${eis.home}/settings-[serverPath]"
+# For development using GWT dev mode file is: "${user.home}/.u2/eis/settings-ROOT"
+# For production deployment Tomcat env property ${eis.home} must be set, default deployment path is then
+# "/opsi-admin-wui" so file location can be e.g.: "/opt/opsi-admin-wui/settings-opsi-admin-wui"
+###############
 
+# LDAP connection settings
+
+# protocol://server:port/base
+ldap.server = ldap://127.0.0.1:10636/OU=unit,DC=server,DC=domain
+ldap.searchBase =
+ldap.searchFilter = (&(objectcategory=person)(objectClass=user)(sAMAccountName={0}))
 ldap.bindDn =
 ldap.bindPassword =
-
 ldap.group.searchBase =
-#ldap.group.searchFilter = (member={0})
 ldap.group.searchFilter = (&(objectcategory=group)(objectClass=group)(member:1.2.840.113556.1.4.1941:={0}))
 
 ldap.group.admin = InstalaceAdmins
