--- a/opsi-admin-wui/src/main/resources/META-INF/cocoon/properties/server.properties
+++ b/opsi-admin-wui/src/main/resources/META-INF/cocoon/properties/server.properties
@@ -1,8 +1,25 @@
+###############
+# All settings in this file can be overridden by including them to "${eis.home}/settings-[serverPath]"
+# For development using GWT dev mode file is: "${user.home}/.u2/eis/settings-ROOT"
+# For production deployment Tomcat env property ${eis.home} must be set, default deployment path is then
+# "/opsi-admin-wui" so file location can be e.g.: "/opt/opsi-admin-wui/settings-opsi-admin-wui"
+###############
+
 eis.home = ${user.home}/.u2/eis
 
-jdbc.driver = org.hsqldb.jdbcDriver
+# HSQL version
+
+#jdbc.driver = org.hsqldb.jdbcDriver
 #jdbc.url = jdbc:hsqldb:file:viewerdb;shutdown=true
-jdbc.url = jdbc:hsqldb:file:${eis.home}/opsidb
-jdbc.username = sa
+#jdbc.url = jdbc:hsqldb:file:${eis.home}/opsidb
+#jdbc.username =
+#jdbc.password =
+#jdbc.validationQuery = SELECT 1 FROM dual
+
+# MYSQL DB version (production)
+
+jdbc.driver = com.mysql.jdbc.Driver
+jdbc.url = jdbc:mysql://localhost:3306/opsiadmin?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&mysqlEncoding=utf8
+jdbc.username =
 jdbc.password =
-jdbc.validationQuery = SELECT 1 FROM dual
+jdbc.validationQuery = SELECT 1
