--- a/opsi-admin-core/src/main/resources/META-INF/cocoon/properties/server.properties
+++ b/opsi-admin-core/src/main/resources/META-INF/cocoon/properties/server.properties
@@ -1,21 +1,42 @@
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+###############
+# All settings in this file can be overridden by including them to "${eis.home}/settings-[serverPath]"
+# For development using GWT dev mode file is: "${user.home}/.u2/eis/settings-ROOT"
+# For production deployment Tomcat env property ${eis.home} must be set, default deployment path is then
+# "/opsi-admin-wui" so file location can be e.g.: "/opt/opsi-admin-wui/settings-opsi-admin-wui"
+###############
+
+# DB HIBERNATE SETTINGS
+
+# HSQL version
+#hibernate.dialect=org.hibernate.dialect.HSQLDialect
+#hibernate.show_sql=true
+#hibernate.format_sql=true
+#hibernate.use_sql_comments=true
+#hibernate.max_fetch_depth=5
+#hibernate.jdbc.batch_size=100
+#hibernate.default_batch_fetch_size=100
+#hibernate.hbm2ddl.auto=create
+
+# MySQL version (production)
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
 hibernate.max_fetch_depth=5
 hibernate.jdbc.batch_size=100
 hibernate.default_batch_fetch_size=100
-#hibernate.hbm2ddl.auto=create
 hibernate.hbm2ddl.auto=
 
+# OPSI SERVER CONNECTION
 
-#musi byt clenem skupiny opsiadmin, mozna i pcpatch
+# credentials used to contact OPSI server (user must be member of group opsiadmin, maybe even pcpatch)
+
+#e.g. opsi.rpc.url = https://opsi.yourserver.domain:4447/rpc
+opsi.rpc.url =
 opsi.user =
 opsi.password =
 
-opsi.rpc.url = https://opsi.ucn.muni.cz:4447/rpc
-
-opsi2.user =
-opsi2.password =
-opsi2.rpc.url = https://tali-test.ucn.muni.cz:4447/rpc
-
+# Secondary OPSI can be used to import clients from secondary OPSI to primary (devel -> production)
+#opsi2.rpc.url =
+#opsi2.user =
+#opsi2.password =
