--- a/opsi-admin-api/pom.xml
+++ b/opsi-admin-api/pom.xml
@@ -4,14 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.muni.ucn</groupId>
 	<artifactId>opsi-admin-api</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-RELEASE</version>
 	<name>OPSI Admin - api</name>
 	<description>OPSI Admin - api</description>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>cz.muni.ucn</groupId>
 		<artifactId>opsi-admin</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-RELEASE</version>
 	</parent>
 	<build>
 		<plugins>
