--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.muni.ucn</groupId>
 	<artifactId>opsi-admin</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-RELEASE</version>
 	<name>OPSI Admin</name>
 	<description>OPSI Admin</description>
 	<packaging>pom</packaging>
