Updated readme, fixed reference to env property EIS_HOME

--- a/opsi-admin-core/src/main/resources/META-INF/cocoon/properties/server.properties
+++ b/opsi-admin-core/src/main/resources/META-INF/cocoon/properties/server.properties
@@ -1,7 +1,7 @@
 ###############
 # All settings in this file can be overridden by including them to "${eis.home}/settings-[serverPath]"
 # For development using GWT dev mode file is: "${user.home}/.u2/eis/settings-ROOT"
-# For production deployment Tomcat env property ${eis.home} must be set, default deployment path is then
+# For production deployment Tomcat env property EIS_HOME must be set, default deployment path is then
 # "/opsi-admin-wui" so file location can be e.g.: "/opt/opsi-admin-wui/settings-opsi-admin-wui"
 ###############
 
