Uncomment properties for secondary OSPI.
- Without placeholder application won't start. But by default, value is empty.

--- a/opsi-admin-core/src/main/resources/META-INF/cocoon/properties/server.properties
+++ b/opsi-admin-core/src/main/resources/META-INF/cocoon/properties/server.properties
@@ -37,6 +37,6 @@ opsi.user =
 opsi.password =
 
 # Secondary OPSI can be used to import clients from secondary OPSI to primary (devel -> production)
-#opsi2.rpc.url =
-#opsi2.user =
-#opsi2.password =
+opsi2.rpc.url =
+opsi2.user =
+opsi2.password =
