--- a/opsi-admin-core/pom.xml
+++ b/opsi-admin-core/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>cz.muni.ucn</groupId>
 			<artifactId>opsi-admin-api</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-RELEASE</version>
 		</dependency>
 		<!-- test scoped dependencies -->
 		<dependency>
