--- a/opsi-admin-wui/pom.xml
+++ b/opsi-admin-wui/pom.xml
@@ -103,12 +103,12 @@
 		<dependency>
 			<groupId>cz.muni.ucn</groupId>
 			<artifactId>opsi-admin-api</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>cz.muni.ucn</groupId>
 			<artifactId>opsi-admin-core</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>cz.u2.eis</groupId>
